- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1040                                 -
---------------------------------------------
- 2020-10-04                                -
---------------------------------------------
.: WSM: Task: Payment Methods (WSM-189)
.: WSM: Task: Fix subscriptions flow (WSM-190)

---------------------------------------------
- 2020-09-30                                -
---------------------------------------------
.: WSM: Task: Subscription Module (WSM-190)

---------------------------------------------
- 2020-09-19                                -
---------------------------------------------
.: WSM: Task: Create price page (WSM-186)

---------------------------------------------
- 2020-09-08                                -
---------------------------------------------
.: WSM: Task: Home Page (WSM-183)

---------------------------------------------
- 2020-08-28                                -
---------------------------------------------
.: WSM: Story: Ordering System (WSM-84)
.: WSM: Task: Focus on MYR Currency (WSM-171)

- v1.0.1031                                 -
---------------------------------------------
- 2020-07-20                                -
---------------------------------------------
.: WSM: BugFix: Update navigation bar (WSM-58)

---------------------------------------------
- 2020-07-19                                -
---------------------------------------------
.: WSM: BugFix: Close page permanently not redirect to page list (WSM-167)
.: WSM: Task: Update package description (WSM-170)
.: WSM: Task: Update catalogue items when navigate to them (WSM-164)
.: WSM: BugFix: Submenu is hidden when hovering (WSM-58)
.: WSM: BugFix: QR code icon not working in firefox (WSM-165)
.: WSM: BugFix: Submenu display position issue (WSM-58)
.: WSM: BugFix: Refresh numbers when navigate between categories (WSM-164)
.: WSM: BugFix: Loading when getting packages (WSM-170)
