@@ -16,10 +16,8 @@ import * as _ from 'lodash';
 export class SubscriptionComponent implements OnInit {
   subscription;
   username;
-  package: Package;
+  subscribingPackage: Package;
   loading: WsLoading = new WsLoading;
-  changePackageLoading: WsLoading = new WsLoading;
-  selectedProduct;
   unsubscribeLoading: WsLoading = new WsLoading;
   isSubscriptionOpened: boolean;
   isUnsubscribedProductConfirmationOpenend: boolean;
@@ -37,64 +35,27 @@ export class SubscriptionComponent implements OnInit {
     this.loading.start();
     this.authPackageAdminService.getShopPackages().pipe(takeUntil(this.ngUnsubscribe)).
     subscribe(result => {
-      this.package = result['result'];
-      if (this.package.next) {
-        this.subscription = this.package.next;
+      this.subscribingPackage = result['result'];
+      if (this.subscribingPackage.next) {
+        this.subscription = this.subscribingPackage.next;
       }
       this.loading.stop();
     })
   }
-  changePackage() {
-    let obj = {
-      nextPackage: this.subscription
-    };
-    this.changePackageLoading.start();
-    // this.authPackageAdminService.changePackage(obj).pipe(takeUntil(this.ngUnsubscribe), finalize(() => {this.changePackageLoading.stop()})).subscribe(result => {
-    //   if (result['result']) {
-    //     this.getShopPackage();
-    //     this.package.next = this.subscription;
-    //     this.isSubscriptionOpened = false;
-    //   }
-    // });
-  }
-  unsubscribe() {
-    let obj = {
-      _id: this.selectedProduct._id
-    };
+  unsubscribePackage() {
     this.unsubscribeLoading.start();
-    // this.authPackageAdminService.unsubscribeProduct(obj).pipe(takeUntil(this.ngUnsubscribe), finalize(() => {this.unsubscribeLoading.stop()})).subscribe(result => {
-    //   if (result['result']) {
-    //     this.getShopPackage();
-    //     this.selectedProduct.subscribe = false;
-    //     this.isUnsubscribedProductConfirmationOpenend = false;
-    //   }
-    // });
-  }
-  isExpired(product) {
-    return product.expiryDate <= new Date();
-  }
-  openUnsubscribe(product) {
-    this.isUnsubscribedProductConfirmationOpenend = true;
-    this.selectedProduct = product;
-  }
-  get nextTotal() { 
-    let total = 0;
-    if (!this.package.forfeit) {
-      switch (this.package.next) {
-        case 'monthly':
-          total += 18.80; break;
-        case '6-month':
-          total += 100.80; break;
-        case 'yearly':
-          total += 177.60; break;
-      }
+    let obj = {
+      ...this.subscribingPackage
     }
-    total += _.sumBy(this.package.products, function (product) {
-      if (product && product.subscribe) {
-        return product.price;
+    this.authPackageAdminService.unsubscribeProduct(obj).pipe(takeUntil(this.ngUnsubscribe)).subscribe(result => {
+      if (result['result']) {
+        this.getShopPackage();
+        this.isUnsubscribedProductConfirmationOpenend = false;
+        this.unsubscribeLoading.stop();
       }
-      return 0;
     });
-    return total;
+  }
+  openUnsubscribe() {
+    this.isUnsubscribedProductConfirmationOpenend = true;
   }
 }
